# AP2026

./: ErstesBlatt.txt
Esercitazione1/: AP_es1_medie  AP_es1_printarcs  CMakeLists.txt  medie.cpp
Esercitazione10/: CmakeLists.txt  gradiente_coniugato.hpp  test_gradiente_coniugato.cpp
Esercitazione2/: CMakeLists.txt  bubblesort.cpp  primi_alg2.cpp  prova_2.cpp
Esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
Esercitazione4/: CmakeLists.txt  main.cpp  sortalgoritms.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
Esercitazione5/: CmakeLists.txt  commenti.txt  confronto_tempi.py  main.cpp  test_mergesort.cpp  test_quicksort.cpp  test_smartsort.cpp
Esercitazione8/: CmakeLists.txt  Grafi.h  test_grafi.cpp
Esercitazione9/: CmakeLists.txt  Grafi.h  contenitori.cpp  contenitori.hpp  main.cpp
Esercitazione_2_ausiliaria/: bubblesort_comp  es2.cpp  primi_alg_comp  prova_comp
Esercitazione_2_ausiliaria/build_es2/: CMakeCache.txt  Makefile  cmake_install.cmake
progetto/: CMakeLists.txt  Grafi.h  Netlist_prova.txt  Netlist_test.txt  contenitori.hpp  depina.hpp  leggi_circuito.hpp  main.cpp  main_cicli_fondamentali.cpp  main_de_Pina.cpp  risolvi_circuito.hpp  test_circuito_cicli_fond.cpp  test_circuito_de_pina.cpp
progetto/build_mainz/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
progetto/build_mainz/Testing/Temporary/: CTestCostData.txt
