cmake_minimum_required(VERSION 3.20)
project(esercitazione1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -Werror=vla")
add_executable(AP_es2_prova prova_2.cpp)
add_executable(AP_es1_primi_alg2 primi_alg2.cpp)
add_executable(AP_es1_bubblesort bubblesort.cpp)
